--- a/tela/src/components/Navbar/NavMenu/NavMenu.module.scss
+++ b/tela/src/components/Navbar/NavMenu/NavMenu.module.scss
@@ -20,7 +20,7 @@
       }
     }
 
-    icon {
+    [icon] {
       position: relative;
       right: 5px;
       transition: 0.3s;
@@ -38,7 +38,6 @@
         cursor: pointer;
         transition: 0.2s;
         padding: 35px 25px;
-        color: $hut-gray;
 
         &:hover {
           color: $hut-orange;
