--- a/tela/src/index.scss
+++ b/tela/src/index.scss
@@ -1,5 +1,9 @@
+@import "./global/variables.scss";
+
 body {
   margin: 0;
+  color: $hut-gray;
+  fill: $hut-gray;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +14,10 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.separator {
+  background-color: rgba($hut-gray, 0.1);
+  height: 2px;
+  width: 100%;
 }
