--- a/tela/src/components/Navbar/Navbar.module.scss
+++ b/tela/src/components/Navbar/Navbar.module.scss
@@ -3,8 +3,8 @@
 .Navbar {
   display: flex;
   width: auto;
-  height: 50px;
-  padding: 20px 20px;
+  height: 5.5vh;
+  padding: 2vh 2vh;
   justify-content: space-between;
-  box-shadow: 4px 4px 20px 2px rgba($hut-green, 0.2);
+  box-shadow: 0.4vh 0.4vh 2vh 0.2vh rgba($hut-green, 0.2);
 }
