--- a/tela/src/components/Navbar/UserMenu/UserMenu.module.scss
+++ b/tela/src/components/Navbar/UserMenu/UserMenu.module.scss
@@ -7,12 +7,11 @@
   [trigger] {
     display: flex;
     align-items: center;
-    padding: 10px;
     cursor: pointer;
 
     [icon] {
       position: relative;
-      top: 2px;
+      top: 0.2vh;
       fill: $hut-orange;
     }
   }
