--- a/tela/src/index.scss
+++ b/tela/src/index.scss
@@ -4,6 +4,7 @@ body {
   margin: 0;
   color: $hut-gray;
   fill: $hut-gray;
+  font-size: 1.8vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -18,6 +19,10 @@ code {
 
 .separator {
   background-color: rgba($hut-gray, 0.1);
-  height: 2px;
+  height: 0.2vh;
   width: 100%;
+}
+
+[icon] svg {
+  width: 3.5vh;
 }
