Layout with sidebar

--- a/tela/src/components/Navbar/NavMenu/NavMenu.module.scss
+++ b/tela/src/components/Navbar/NavMenu/NavMenu.module.scss
@@ -24,7 +24,7 @@
       position: relative;
       right: 0.5vh;
       transition: 0.3s;
-      fill: $hut-orange;
+      fill: $hut-green-dark-1;
     }
 
     ul {
@@ -40,7 +40,7 @@
         padding: 3.5vh 2.5vh;
 
         &:hover {
-          color: $hut-orange;
+          color: $hut-green-dark-1;
         }
       }
     }
