--- a/tela/src/components/Navbar/UserMenu/UserMenu.module.scss
+++ b/tela/src/components/Navbar/UserMenu/UserMenu.module.scss
@@ -12,7 +12,7 @@
     [icon] {
       position: relative;
       top: 0.2vh;
-      fill: $hut-orange;
+      fill: $hut-green-dark-1;
     }
   }
 }
