--- a/tela/src/components/Navbar/UserMenu/UserNav.module.scss
+++ b/tela/src/components/Navbar/UserMenu/UserNav.module.scss
@@ -56,8 +56,8 @@
       }
 
       &:hover {
-        color: $hut-orange;
-        fill: $hut-orange;
+        color: $hut-green-dark-1;
+        fill: $hut-green-dark-1;
       }
     }
   }
