--- a/tela/src/global/variables.scss
+++ b/tela/src/global/variables.scss
@@ -1,3 +1,7 @@
 $hut-green: #76E13B;
-$hut-orange: orange;
-$hut-gray: gray;
+$hut-green-dark-1: rgb(107, 194, 60);
+$hut-gray-dark-2: rgb(51, 51, 51);
+$hut-gray-dark-1: rgb(68, 68, 68);
+$hut-gray: rgb(90, 90, 90);
+$hut-gray-light-1: rgb(128, 128, 128);
+$hut-gray-light-2: rgb(150, 150, 150);
