--- a/tela/src/containers/Layout/Layout.module.scss
+++ b/tela/src/containers/Layout/Layout.module.scss
@@ -1,3 +1,12 @@
 @import '../../global/variables.scss';
 
-.Layout {}
+.Layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+
+  .content {
+    flex-grow: 1;
+    display: flex;
+  }
+}
