--- a/tela/src/components/Sidebar/Sidebar.module.scss
+++ b/tela/src/components/Sidebar/Sidebar.module.scss
@@ -4,41 +4,41 @@
   background-color: $hut-gray-dark-1;
   height: 100%;
   width: 6vw;
-}
 
-.SidebarLink {
-  height: 9vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  border-bottom: 1px solid rgba(white, 0.1);
+  .link {
+    height: 9vh;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    border-bottom: 0.1vh solid rgba(white, 0.1);
 
 
-  [icon] svg {
-    fill: $hut-gray-light-2;
-    width: 5vh;
-  }
+    [icon] svg {
+      fill: $hut-gray-light-2;
+      width: 5vh;
+    }
 
-  span {
-    color: white;
-    margin-top: 0.1vh;
-    font-size: 1.3vh;
-  }
-
-  &:hover {
-    background-color: $hut-gray;
-  }
-
-  &.selected {
-    background-color: $hut-gray-dark-2;
-
-    [icon] svg,
     span {
-      fill: $hut-green;
-      color: $hut-green
+      color: white;
+      margin-top: 0.1vh;
+      font-size: 1.3vh;
+    }
+
+    &:hover {
+      background-color: $hut-gray;
+    }
+
+    &.selected {
+      background-color: $hut-gray-dark-2;
+
+      [icon] svg,
+      span {
+        fill: $hut-green;
+        color: $hut-green
+      }
     }
   }
 }
